# Nucleoid

./: $.js  $assignment.js  $block.js  $call.js  $class.js  $delete.js  $expression.js  $for.js  $function.js  $if.js  $instance.js  $let.js  $property.js  $return.js  $throw.js  $value.js  $variable.js  .eslintrc.js  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierrc.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  api.js  assignment$class.js  assignment$instance.js  assignment$property.js  assignment$variable.js  assignment.js  bin.js  block$class.js  block$declaration.js  block$instance.js  block$prototype.js  block.js  class.js  controlflow.js  (+72 more)
.husky/: commit-msg  pre-commit
arc/: .gitignore  README.md  package-lock.json  package.json  server.js
es6/: es6$assignment.js  es6$block.js  es6$class.js  es6$delete.js  es6$for.js  es6$function.js  es6$if.js  es6$let.js  es6$return.js  es6$throw.js  es6$variable.js  es6.js
python/: .flake8  .gitignore  __init__.py  pyproject.toml
python/lang/handlers/: assignment_handler.py  expression_handler.py
python/nucleoid/: Calculator.py  __init__.py  graph.py  logger.py  main.py  nucleoid.py  parse.py  process.py  state.py
python/tests/: __init__.py  test_calculator.py  test_nucleoid.py
scripts/: commit-msg  install.sh  package.sh  performance  pre-commit
src/: Expression.js  Instruction.js  Scope.js  alias.js  block$class.js  block.js  break.js  cache.js  cache.ts  class.js  cluster.js  config.d.ts  config.js  context.js  datastore.js  datastore.ts  delete$object.js  delete$variable.js  delete.js  (+46 more)
(+277 files in other folders)
